# VST-AnalogChannel

./: .gitignore  AnalogChannel.jucer  CMakeLists.txt  CNAME  CREDITS.md  README.md  README.txt  build-and-sign-macos.sh  build-windows.ps1  index.html  install-macos.sh  update-version.ps1  update-version.sh
.github/: FUNDING.yml
Docs/: UserManual.md  VERSION_UPDATE_WORKFLOW.md
Source/: ChannelVariation.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Algorithms/: Baxandall2.h  BellFilter.h  CL1BCompressor.h  Channel8Console.h  ClipSoftly.h  DigitalVersatileCompressor.h  FinalClip.h  PurestConsole3Channel.h  PurestDrive.h  ToTape8.h  Tube2.h
Source/GUI/: AnalogChannelLookAndFeel.h  AnalogChannelsSectionComponent.h  Colors.h  ConsoleSectionComponent.h  ConsoleVolumeBarComponent.h  ControlCompSectionComponent.h  EQSectionComponent.h  FiltersSectionComponent.h  LEDMeterStrip.h  LowDynamicSectionComponent.h  OutStageSectionComponent.h  PeakMeter.h  PreInputSectionComponent.h  StyleCompSectionComponent.h  VolumeSectionComponent.h
Source/GUI/Common/: KuramaColors.h  PluginHeaderBar.cpp  PluginHeaderBar.h  PresetBarComponent.cpp  PresetBarComponent.h
Source/Sections/: BypassableSection.h  ConsoleSection.h  ControlCompSection.h  EQSection.h  FilterSection.h  LowDynamicSection.h  OutStageSection.h  PreInputSection.h  StyleCompSection.h  VolumeSection.h
scripts/: build-linux.sh
